--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,5 @@
         "skipLibCheck": true,
         "noEmit": true,
     },
-    "include": ["src/**/*"],
+    "include": ["src/**/*", "tests/**/*"],
 }
