--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
     "name": "fakeium",
     "version": "0.0.1",
     "author": "José Miguel Moreno <josemmo@pm.me>",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/josemmo/fakeium"
+    },
     "homepage": "https://github.com/josemmo/fakeium",
     "license": "MIT",
     "type": "module",
