--- a/package.json
+++ b/package.json
@@ -17,22 +17,22 @@
     "scripts": {
         "lint": "tsc --noEmit && eslint .",
         "build": "pkgroll --clean-dist && tsx after-build.ts",
-        "test": "mocha --import=tsx 'tests/**/*.spec.ts'"
+        "test": "mocha --import=tsx tests/**/*.spec.ts"
     },
     "dependencies": {
-        "@types/node": "^22.9.0",
-        "isolated-vm": "^5.0.1"
+        "@types/node": "^22.14.0",
+        "isolated-vm": "^5.0.4"
     },
     "devDependencies": {
-        "@eslint/js": "^9.15.0",
-        "@types/chai": "^5.0.1",
-        "@types/mocha": "^10.0.9",
-        "chai": "^5.1.2",
-        "eslint": "^9.15.0",
-        "mocha": "^10.8.2",
-        "pkgroll": "^2.5.1",
-        "tsx": "^4.19.2",
-        "typescript": "^5.6.3",
-        "typescript-eslint": "^8.14.1-alpha.6"
+        "@eslint/js": "^9.24.0",
+        "@types/chai": "^5.2.1",
+        "@types/mocha": "^10.0.10",
+        "chai": "^5.2.0",
+        "eslint": "^9.24.0",
+        "mocha": "^11.1.0",
+        "pkgroll": "^2.12.1",
+        "tsx": "^4.19.3",
+        "typescript": "^5.8.3",
+        "typescript-eslint": "^8.29.1"
     }
 }
